--- a/3.29/game.html
+++ b/3.29/game.html
@@ -76,9 +76,14 @@
             return g
         }
 
+        var ball = function() {
+            
+        }
+        
         var _main = function() {
             var paddle = Paddle()
             var game = hcGame()
+            var ball = ball()
             game.update = function() {
             }
             game.draw = function() {
