面向对象优化

--- a/4.01/game.html
+++ b/4.01/game.html
@@ -11,13 +11,16 @@
             width: 200px;
         }
     </style>
-    <script src="utils.js"></script>
-    <script src="hcGame.js"></script>
-    <script src="ball.js"></script>
+    <script src="hcgame/utils.js"></script>
+    <script src="hcgame/hcGame.js"></script>
     <script src="paddle.js"></script>
-    <script src="levels.js"></script>
+    <script src="ball.js"></script>
     <script src="block.js"></script>
-    <script src="scene.js"></script>
+    <script src="levels.js"></script>
+    <script src="hcgame/scene.js"></script>
+    <script src='scene/scene_hc.js'></script>
+    <script src='scene/scene_end.js'></script>
+    <script src='scene/scene_start.js'></script>
 </head>
 <body>
 <canvas id="games" width="400" height="280"></canvas>
